成功集成ehcache,并拿到了它的缓存